--- a/DependencyAnalyser/App.xaml
+++ b/DependencyAnalyser/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="DependencyAnalyser.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:utilities="clr-namespace:DependencyAnalyser.Utilities"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,6 +12,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <utilities:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <utilities:BooleanVisibileConverter x:Key="BooleanVisibileConverter" />
+            <utilities:BooleanInvisibileConverter x:Key="BooleanInvisibileConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
