--- a/DependencyAnalyser/MainWindow.xaml
+++ b/DependencyAnalyser/MainWindow.xaml
@@ -15,8 +15,8 @@
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
             <TextBox Text="{Binding TargetDirectory}" VerticalAlignment="Center" Width="350" />
-            <Button Click="Browse_OnClick" Content="Browse" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="30,5" Margin="10,0" />
-            <Button Click="Load_OnClick" Content="Load" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="30,5" />
+            <Button Click="Browse_OnClick" Content="Browse" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="30,5" Margin="10,0" IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}" />
+            <Button Click="Load_OnClick" Content="Load" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="30,5" IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}" />
         </StackPanel>
         <DataGrid x:Name="Packages" ItemsSource="{Binding}" DataContext="{Binding Packages}" GridLinesVisibility="Horizontal" IsReadOnly="True" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" Grid.Row="1" BorderThickness="1" Grid.Column="0">
             <DataGrid.Columns>
@@ -32,9 +32,12 @@
         </DataGrid>
         <DockPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center">
             <Label Content="Component: " DockPanel.Dock="Left" />
-            <ComboBox ItemsSource="{Binding}" DataContext="{Binding Components}" DisplayMemberPath="Name" SelectedValuePath="Id" Margin="0,0,10,0" DockPanel.Dock="Left" MinWidth="150" />
-            <Button Click="Upload_OnClick" Content="Upload" Padding="30,5" DockPanel.Dock="Left" />
-            <Button Content="Manage Components" VerticalAlignment="Center" HorizontalAlignment="Right" DockPanel.Dock="Right" Click="ManageComponents_OnClick" />
+            <ComboBox ItemsSource="{Binding Components}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedItem="{Binding SelectedComponent}" IsSynchronizedWithCurrentItem="True" Margin="0,0,10,0" DockPanel.Dock="Left" MinWidth="150" />
+            <Button Click="Upload_OnClick" Content="Upload" Padding="30,5" DockPanel.Dock="Left" IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}" />
+            <Button Content="Manage Components" VerticalAlignment="Center" HorizontalAlignment="Right" DockPanel.Dock="Right" Click="ManageComponents_OnClick" IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}" />
+        </DockPanel>
+        <DockPanel Background="LightBlue" Opacity="0.5" Grid.ColumnSpan="2" Grid.RowSpan="3" Grid.Column="0" Grid.Row="0" Visibility="{Binding IsLoading, Converter={StaticResource BooleanVisibileConverter}}">
+            <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36">Uploading. Please Wait...</Label>
         </DockPanel>
     </Grid>
 </controls:MetroWindow>
