Completed implementation of Summary page

--- a/DependencySummary/Views/Home/Index.cshtml
+++ b/DependencySummary/Views/Home/Index.cshtml
@@ -4,24 +4,30 @@
     </div>
     <div id="content" class="hidden">
         <div id="summaryHeader" class="row header">
-            <div class="col-lg-6 column">
+            <div class="col-lg-4 column">
                 Packages
             </div>
-            <div class="col-lg-3 column">
-                Versions &amp; Frameworks
+            <div class="col-lg-2 column">
+                Versions
             </div>
-            <div class="col-lg-3 column">
+            <div class="col-lg-2 column">
                 Components
+            </div>
+            <div class="col-lg-4 column">
+                Projects
             </div>
         </div>
         <div id="summary" class="row flex-container items">
-            <div id="packages" class="col-lg-6 column flex-item">
+            <div id="packages" class="col-lg-4 column flex-item">
 
             </div>
-            <div id="versions" class="col-lg-3 column flex-item">
+            <div id="versions" class="col-lg-2 column flex-item">
 
             </div>
-            <div id="components" class="col-lg-3 column flex-item">
+            <div id="components" class="col-lg-2 column flex-item">
+
+            </div>
+            <div id="projects" class="col-lg-4 column flex-item">
 
             </div>
         </div>
