--- a/DependencySummary/Content/Site.css
+++ b/DependencySummary/Content/Site.css
@@ -1,12 +1,13 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 40px;
     padding-bottom: 20px;
+    background-color: #d3d3d3
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0;
+    padding-right: 15px
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -30,6 +31,7 @@ a {
 
 .summary {
     margin-top: 20px;
+    background-color: #ffffff;
     border-right: solid 1px #000000
 }
 
@@ -42,7 +44,8 @@ a {
     font-weight: bold;
     text-align: center;
     border-top: solid 1px #000000;
-    border-bottom: solid 1px #000000
+    border-bottom: solid 1px #000000;
+    background-color: #20b2aa
 }
 
 .summary .items div {
